--- a/huu-ich/dau-tu-co-phieu/quy-dau-tu.html
+++ b/huu-ich/dau-tu-co-phieu/quy-dau-tu.html
@@ -105,18 +105,22 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 @media (max-width: 399px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:10px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 400px) and (max-width: 499px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:20px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 500px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 @media (min-width: 1260px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 
@@ -267,9 +271,9 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <ol>
     <li>những khoản chưa dùng đến trong dài hạn, trên năm năm, để vào quỹ đầu tư cổ phiếu hoặc quỹ cân bằng</li>
     <li>những khoản sẽ dùng đến trong khoảng từ nửa năm đến năm năm, để vào quỹ đầu tư trái phiếu</li>
-    <li>những khoản sắp dùng đến trong vòng nửa năm, gửi tiết kiệm kỳ hạn ngắn ở ngân hàng</li>
+    <li>những khoản sắp dùng đến trong vòng nửa năm, gửi tiết kiệm kỳ hạn ngắn ở ngân hàng, hoặc quỹ DCIP của Dragon Capital</li>
     <li>khi số tiền trong ngân hàng giảm xuống dưới mức cần thiết, chúng ta chuyển tiền từ quỹ đầu tư trái phiếu cho vào ngân hàng</li>
-    <li>khi số tiền trong quỹ đầu tư trái phiếu giảm xuống dưới mức cần thiết, chúng ta chuyển tiền từ quỹ đầu tư cổ phiếu sang quỹ đầu tư trái phiếu, nên chuyển vào thời điểm giá cổ phiếu đang cao sẽ có lợi hơn</a>
+    <li>khi số tiền trong quỹ đầu tư trái phiếu giảm xuống dưới mức cần thiết, chúng ta chuyển tiền từ quỹ đầu tư cổ phiếu sang quỹ đầu tư trái phiếu, nên chuyển vào thời điểm giá cổ phiếu đang cao sẽ có lợi hơn (xem kỹ hơn trong trang <a href="../ke-hoach-tai-chinh/khtcp2">Kế-hoạch tài-chính giai-đoạn an-hưởng</a>)</a>
   </ol>
   <div class="flright"><amp-img alt="Tích luỹ tài sản bằng quỹ mở" src="/images/Mutual-Fund.jpg" width="500" height="400" layout="responsive"></amp-img></div>
   <p>Khi tham gia quỹ đầu tư, nhà đầu tư được hưởng lợi như trực tiếp đầu tư vào doanh nghiệp, <a href="so-tk-hay-dau-tu">lợi nhuận thường cao hơn gửi tiết kiệm ở ngân hàng</a>, lại không tốn thời giờ tìm hiểu, phân tích số liệu tài chính của các doanh nghiệp vì đã có nhóm chuyên gia được thuê để làm việc chuyên môn đó.
@@ -296,7 +300,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <br>Bạn có thể xem lý do thua lỗ khi <i>chơi</i> cổ phiếu trong bài <a href="../de-tien-vao-dau">Để tiền vào đâu</a>.</p>
   <p>Quỹ đầu tư không dùng vốn vay nên không bị rơi vào vòng xoáy lỗ sạch vốn như đầu cơ cổ phiếu (xem <a href="../cach-dau-tu">Phân biệt những cách đầu tư và đầu cơ</a>).</p>
   <p>Quỹ đầu tư sẽ tăng giá và cho kết quả lời cao trong dài hạn, nhưng có vài giai đoạn ngắn giảm giá. Do đó rủi ro duy nhất của quỹ đầu tư là rủi ro ngắn hạn, cách đối phó với rủi ro đó là để tiền trong quỹ đủ lâu như đã ghi ở trên.
-  <br>Kết quả thực tế cho thấy các khoản đầu tư đều đặn dài hạn trong quỹ đầu tư VFMVF1 có lợi nhuận trung bình là 10,47%/năm <!-- DCDS!J2 -->
+  <br>Kết quả thực tế cho thấy các khoản đầu tư đều đặn dài hạn trong quỹ đầu tư VFMVF1 có lợi nhuận trung bình là 12,19%/năm <!-- DCDS!J2 -->
 .</p>
 
   <p><span class="red"><b>Chú ý</b></span>: trong những năm 2013-2014, rất nhiều người hay công ty chuyên đầu cơ ngoại tệ và vàng đã lừa gạt người khác bằng cách xưng là quỹ đầu tư, công ty vàng bạc đá quý, đầu tư uỷ thác… Hãy xem thêm bài viết về <a href="../cach-dau-tu">các cách đầu tư</a>.</p>
