--- a/huu-ich/cach-dau-tu.html
+++ b/huu-ich/cach-dau-tu.html
@@ -105,18 +105,22 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 @media (max-width: 399px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:10px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 400px) and (max-width: 499px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:20px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 500px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 @media (min-width: 1260px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 
@@ -189,20 +193,20 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   </div>
 
   <h1>Phân-biệt những cách đầu-tư</h1>
-  <div class="right">Viết lần đầu trong Tháng Sáu, 2013.</div>
+  <div class="right">Viết lần đầu trong Tháng Sáu, 2013.<br>Sửa lần cuối trong Tháng Giêng, 2024.</div>
   <p>Đầu tư là một cách gia tăng tài sản. Mọi người đều phải biết đầu tư. Người giàu có dư tiền thì đầu tư để duy trì sự giàu có. Người chưa giàu cần phải tiết kiệm để có tiền đầu tư sao cho có đủ tiền dùng cho những <a href="cau-chuyen/nhung-hon-da">kế hoạch tương lai</a>. Tuy nhiên chữ đầu tư được dùng trong rất nhiều cách, có những cách dùng sai gây hiểu lầm, làm cho nhiều người sợ đầu tư. Hãy cùng tìm hiểu các cách đó: <a href="#dau_tu">đầu tư</a>, <a href="#dau_co">đầu cơ</a>, <a href="#lua_dao">lừa đảo</a>.</p>
 
   <h2 id="dau_tu">Đầu tư</h2>
   <dl>
     <dt><b>Đầu tư trực tiếp</b></dt>
     <dd>người có tiền đứng ra lập doanh nghiệp sản xuất/dịch vụ/thương mại, điều hành doanh nghiệp đó để đồng tiền được sinh sôi ra. Quy mô doanh nghiệp có thể từ nhỏ đến rất lớn. Hoạt động của doanh nghiệp có thể là sản xuất hàng hoá, cung cấp dịch vụ, thương mại (bán sỉ, bán lẻ), xây dựng, cho thuê.<br />
-    Để đầu tư trực tiếp thành công cần có những kỹ năng điều hành doanh nghiệp, nhìn thấy cơ hội… Chỉ có 5% dân số thế giới là chủ doanh nghiệp thành công. Nếu không có đủ kỹ năng để đầu tư trực tiếp thì cũng có thể tăng thu nhập bằng những cách đầu tư gián tiếp sau đây. Và những chủ doanh nghiệp thành công chắc chắn cũng đầu tư gián tiếp, do đó mọi người đều cần có đầu tư gián tiếp.</dd>
+    Để đầu tư trực tiếp thành công cần có những kỹ năng điều hành doanh nghiệp, nhìn thấy cơ hội… Chỉ có 5% dân số thế giới là chủ doanh nghiệp thành công. Nếu không có đủ kỹ năng để đầu tư trực tiếp thì cũng có thể tăng thu nhập bằng những cách đầu tư gián tiếp sau đây. Và những chủ doanh nghiệp thành công chắc chắn cũng đầu tư gián tiếp, do đó mọi người đều cần có đầu tư gián tiếp. Nếu bạn đang là chủ của một hoặc vài doanh-nghiệp, bạn hãy đa-dạng-hoá tài-sản bằng cách làm chủ nhỏ của vài chục doanh-nghiệp lớn nữa qua quỹ-đầu-tư.</dd>
     <dt><b>Đầu tư gián tiếp</b></dt>
     <dd>hùn vốn vào một doanh nghiệp đang hoạt động. Nếu doanh nghiệp đó là công ty cổ phần thì vốn được quy ra thành các cổ phiếu. Nếu cổ phiếu đó được niêm yết trên thị trường chứng khoán thì người đầu tư có thể chọn mua cổ phiếu và bán cổ phiếu dễ dàng.</dd>
     <dt><b>Uỷ thác đầu tư</b></dt>
     <dd>nhiều người muốn đầu tư gián tiếp nhưng không biết nên đầu tư vào doanh nghiệp nào thì có thể nhờ các tổ chức tài chính. Hợp đồng uỷ thác đầu tư thường có kỳ hạn một vài năm, bên có tiền sẽ nhận được lợi nhuận cao hơn hoặc bằng lãi suất tiết kiệm ở ngân hàng, ngoài lợi nhuận cam kết đó, nếu việc đầu tư sinh lợi nhiều thì khoản lợi hơn dự kiến đó sẽ được chia giữa bên có tiền và tổ chức thực hiện đầu tư. Lợi nhuận được trả hàng năm, không thể chấm dứt hợp đồng rút vốn trước hạn.</dd>
     <dt><b><a href="dau-tu-co-phieu/quy-dau-tu">Quỹ đầu tư</a></b></dt>
-    <dd>Những tổ chức tài chính có vốn và biết đầu tư nhưng muốn tăng số vốn lên nhiều lần để có cơ hội đầu tư tốt hơn sẽ lập quỹ đầu tư. Tiền góp vào quỹ đầu tư được quy thành các đơn vị quỹ giống như cổ phiếu. Những người muốn đầu tư gián tiếp nhưng không biết nên đầu tư vào doanh nghiệp nào và không muốn bị ràng buộc thời hạn uỷ thác đầu tư thì có thể mua đơn vị quỹ. Quỹ đầu tư không chia lãi như uỷ thác đầu tư, lợi nhuận của quỹ đầu tư thể hiện qua sự tăng giá của đơn vị quỹ. Người sở hữu đơn vị quỹ có thể bán đơn vị quỹ để lấy tiền bất kỳ lúc nào.</dd>
+    <dd>Những tổ chức tài chính có vốn và biết đầu tư nhưng muốn tăng số vốn lên nhiều lần để có cơ hội đầu tư tốt hơn sẽ lập quỹ đầu tư. Tiền góp vào quỹ đầu tư được quy thành các đơn vị quỹ giống như cổ phiếu. Những người muốn đầu tư gián tiếp nhưng không biết nên đầu tư vào doanh nghiệp nào và không muốn bị ràng buộc thời hạn uỷ thác đầu tư thì có thể mua đơn vị quỹ. Quỹ đầu tư không chia lãi như uỷ thác đầu tư, lợi nhuận của quỹ đầu tư thể hiện qua sự tăng giá của đơn vị quỹ. Người sở hữu đơn vị quỹ có thể bán đơn vị quỹ để lấy tiền bất kỳ lúc nào. Đầu-tư qua quỹ-đầu-tư là làm chủ nhỏ của vài chục doanh-nghiệp hàng đầu trong nền kinh-tế. Các quỹ-đầu-tư ở Mỹ sở-hữu phần-lớn cổ-phần của các doanh-nghiệp niêm-yết trên thị-trường-chứng-khoán.</dd>
   </dl>
 
 
