--- a/kinh-nghiem/linh-tinh/can-biet.html
+++ b/kinh-nghiem/linh-tinh/can-biet.html
@@ -237,7 +237,7 @@ Những điều dưới-đây cũng có thể đúng với smartphone iOS.
 <dt>NÊN ghi thông-tin cấp-cứu của bạn vào mục <i>Emergency information</i> trong <i>Settings</i></dt>
 <dd>
 Thông-tin cấp-cứu gồm có tên, địa-chỉ, nhóm-máu, các chất dị-ứng, các bệnh mãn-tính, số-điện-thoại của những người thân nhất, có <a href="https://safechat.com/post/2898376295060271735" target='_blank'>đăng-ký hiến-tạng</a> hay không.<div class="portimg"><amp-img alt="Emergency information" src="/images/emergency.jpg" width="1077" height="1710" layout="responsive"></amp-img></div>
-<br>Khi bạn bị bất-tỉnh nơi công-cộng, được người-lạ đưa đi cấp-cứu, nhân-viên y-tế có-thể đọc được những thông-tin cấp-cứu đó bằng-cách bấm vào chữ Emergency trong màn-hình máy đang bị khoá. Với những thông-tin đó, việc cấp-cứu sẽ nhanh hơn.
+<br>Khi bạn bị bất-tỉnh nơi công-cộng, người-lạ có-thể gọi cho người-thân của bạn bằng chính smartphone của bạn mà không cần mở khoá màn-hình, nhân-viên y-tế có-thể đọc được những thông-tin cấp-cứu đó bằng-cách bấm vào chữ Emergency trong màn-hình máy đang bị khoá. Với những thông-tin đó, việc cấp-cứu sẽ nhanh hơn.
 <br>Khi bạn gặp một người đang bất-tỉnh, bạn cũng NÊN thử tìm thông-tin cấp-cứu trong smartphone của người đó, và gọi cho người-thân của người đó.</dd>
 <dt>KHÔNG-NÊN tắt các app đã dùng xong</dt>
 <dd>Các app đã dùng xong vẫn xuất-hiện khi bạn chọn chức-năng chuyển-màn-hình giữa các app, sự xuất-hiện đó có hơi làm rối mắt bạn. Tuy-nhiên những app đó không thật-sự chạy và không làm hao pin hay hao lưu-lượng Internet, bạn không-cần tắt chúng. Đó là nhờ sự kiểm-soát của hệ-điều-hành Android. Ngược-lại, nếu bạn tắt chúng thì bạn có-thể bị hao pin hơn khi bạn cần dùng app đó lần nữa vì Android phải đọc lại app đó từ flash storage vào RAM.</dd>
