--- a/kinh-nghiem/may-tinh/pi-network.html
+++ b/kinh-nghiem/may-tinh/pi-network.html
@@ -324,7 +324,10 @@ Tác-dụng càng rõ trên những máy có ổ-đĩa chậm. Trên máy laptop
 <p>Tắt các background app bằng Control Panel.</p>
 <h6>Antivirus</h6>
 Chương-trình antivirus của Microsoft là Windows Security rất hao CPU. Tôi cài Avast vào để đỡ hao. Sau-đó tôi tắt luôn antivirus.
-<h6>Giảm tải CPU</h6>
+<h6>Tắt việc làm đẹp màn-hình</h6>
+<p>Mở Search từ Windows menu, gõ View advanced system settings vào ô search, bấm Open, chọn tab Advanced, bấm Settings trong ô Performance, chọn Adjust for best performance.
+<br>Làm như trên sẽ tắt việc làm đẹp màn-hình, đỡ tốn công CPU.</p>
+<h6>Giảm tải CPU trong Pi Node</h6>
 <div>
 <p>App Pi_Node trên Windows đều-đặn mở task để lấy thông-tin từ Docker container pi-consensus rồi update vào window của app. Nhưng chúng-ta đâu có ngồi nhìn màn-hình suốt-ngày nên không cần nó update.
 <br>Tôi đã thử close window Pi Node bằng cách bấm Ctrl-W, close window chứ không exit nên nó vẫn chạy ngầm mà không mở task để lấy thông-tin từ Docker container pi-consensus. Miễn là đừng exit Pi Node thì vẫn có bonus. Bonus vẫn tăng hàng-ngày, tăng nhanh hay chậm so với khi Pi Node chạy trên màn-hình thì không biết vì bonus vốn là một điều bí-ẩn.
