--- a/kinh-nghiem/linh-tinh/can-biet.html
+++ b/kinh-nghiem/linh-tinh/can-biet.html
@@ -296,7 +296,9 @@ Bạn phải <b>vô-cùng</b> cẩn-thận với tài-khoản tiền của bạn
 <dt>KHÔNG-NÊN cho bất-kỳ người nào biết OTP</dt>
 <dd>Bạn phải tuyệt-đối giữ kín mật-khẩu và OTP của tài-khoản giao-dịch online banking. Không cho bất-kỳ người nào biết, kể cả khi người đó tự-xưng là nhân-viên ngân-hàng, hay công-an.</dd>
 <dt>KHÔNG-NÊN tin mọi SMS hay e-mail có-vẻ là gửi từ ngân-hàng</dt>
-<dd>Không-bao-giờ bấm vào các link được gửi đến qua SMS hoặc e-mail có vẻ là gửi từ ngân-hàng. Bạn nên lưu lại URL đúng của các ngân-hàng cần dùng vào bookmark và chỉ mở từ bookmark.</dd> 
+<dd>Không-bao-giờ bấm vào các link được gửi đến qua SMS hoặc e-mail có vẻ là gửi từ ngân-hàng. Bạn nên lưu lại URL đúng của các ngân-hàng cần dùng vào bookmark và chỉ mở từ bookmark.</dd>
+<dt>KHÔNG-NÊN cài app được người-lạ đề-nghị</dt>
+<dd>Bọn lừa-đảo thường tự-xưng là nhân-viên ngân-hàng, cán-bộ thuế, hay công-an, rồi đề-nghị nạn-nhân cài app của cơ-quan. Những app giả đó sẽ ăn-cắp thông-tin trong smartphone của bạn, hoặc lén điều-khiển smartphone của bạn để thực-hiện giao-dịch với ngân-hàng.</dd>
 </dl>
 
 <h3>Quỹ-đầu-tư</h3>
