--- a/kinh-nghiem/may-tinh/protect.html
+++ b/kinh-nghiem/may-tinh/protect.html
@@ -223,6 +223,15 @@ Dàn bài:
 <li>tránh để smartphone bị trộm hoặc cướp. Giá trị vật chất của smartphone cũng đáng kể nhưng có khi giá trị của những file chứa trong smartphone còn cao hơn nhiều,</li>
 <li>tránh đừng để password bị lộ hoặc quên.</li>
 </ul>
+<h3>Malware</h3>
+<p>Malware là phần-mềm độc-hại lén xâm-nhập vào máy-tính (kể cả smartphone và tablet) để ăn-cấp thông-tin trong máy. Thông-tin có-thể nằm trong các file như đã viết ở trên, hoặc ở trong RAM của các app (ví-dụ password đang được gõ vào).</p>
+<p>Malware xâm-nhập vào máy bằng-cách lừa người-dùng-máy.</p>
+<ul>
+<li>Bạn mở một trang web nào đó có một số thông-tin mà bạn đang quan-tâm, bạn download một file tài-liệu hay phần-mềm từ trang web đó vào máy mà không-ngờ rằng có một malware vào nằm trong máy của bạn,</li>
+<li>Bạn nhận được một e-mail từ một <i>người-quen</i>, trong e-mail đó có một file tài-liệu hay hình-ảnh, bạn mở file đó ra, thế là một malware vào nằm trong máy của bạn.</li>
+</ul>
+<p>Hãng <a href="https://en.wikipedia.org/wiki/Nortel#Hacks" target='_blank'>Northern Telecom của Canada bị phá-sản</a> vì hacker xâm-nhập vào hệ-thống máy-tính và ăn-cắp hết bí-mật công-nghệ. Tất-cả bắt-đầu bằng malware. Cá-nhân thì có-thể không bị malware gây thiệt-hại đến mức phá-sản, nhưng có-thể thiệt-hại rất lớn về tinh-thần.</p>
+
 <h3>Trường hợp khác</h3>
 <p>Một trường hợp bị lộ file riêng tư một cách không ngờ đó là giao máy tính hoặc smartphone bị hư cho thợ sửa và thợ đọc được những file trong đó. Để tránh bị như vậy, bạn hãy yêu cầu thợ gỡ đĩa cứng, thẻ nhớ đưa lại cho bạn trước khi bạn rời khỏi cửa hàng.
 <br>Smartphone đã có sẵn tính năng mã hoá các file ghi vào bộ nhớ của nó. Trước khi dùng máy mới, bạn cần xem lại xem tính năng đó có bật lên chưa. Với tính năng đó thì thợ sửa smartphone sẽ không thấy được những file trong máy nếu không có password để login. Và bạn luôn luôn nhớ đừng giao password để thợ thử máy trong khi sửa. Thay vì giao password, bạn hãy đồng ý để thợ factory reset smartphone của bạn. Thà mất hết file còn hơn để lộ những file riêng tư.</p>
@@ -271,8 +280,7 @@ Dàn bài:
 <p>Ngoài rủi ro quên mất password, còn có rủi ro bị người khác biết được password. Việc mất trộm password thường là do bị lừa:</p>
 <ul>
 <li>Bạn bị lừa đến một trang web giả, trông rất giống trang web cung cấp dịch vụ (ngân hàng, email, Facebook…) mà bạn định mở ra dùng, bạn gõ tên và password vào trang web giả đó, thế là bạn đã bị mất password.</li>
-<li>Bạn mở một trang web nào đó có một số thông tin mà bạn đang quan tâm, bạn download một file tài liệu hay phần mềm từ trang web đó vào máy, thế là một malware vào nằm trong máy của bạn, lặng lẽ gửi những gì bạn gõ trên bàn phím cho kẻ gian, kẻ gian sẽ lọc ra để lấy tên và password của các dịch vụ bạn thường dùng.</li>
-<li>Bạn nhận được một email từ một <i>người quen</i>, trong email đó có một file tài liệu hay hình ảnh, bạn mở file đó ra, thế là một malware vào nằm trong máy của bạn.</li>
+<li>máy của bạn bị malware xâm-nhập, lặng lẽ gửi những gì bạn gõ trên bàn phím cho kẻ gian, kẻ gian sẽ lọc ra để lấy tên và password của các dịch vụ bạn thường dùng.</li>
 </ul>
 <p>Để tránh bị lừa thì bạn hãy bình tĩnh đọc kỹ những thông báo nhận được, và tránh cài những phần mềm không rõ nguồn gốc (phần mềm đã crack), cân nhắc cẩn thận khi mở những file đính kèm email.
 <br>Bạn cũng nên nhớ rằng <b>không bao giờ</b> gõ password của mình ở máy của người khác. Lý do là bạn không thể biết chắc rằng máy đó không có malware trộm password. Khi tôi cần dùng máy ở tiệm in, tôi luôn luôn chuẩn bị sẵn những thứ cần in thành các file pdf, và để các file đó trong một <a href="cloudstorage">cloud storage</a> mà không cần password.</p>
