--- a/home/cv.html
+++ b/home/cv.html
@@ -106,18 +106,22 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 @media (max-width: 399px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:10px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 400px) and (max-width: 499px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:20px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 500px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 @media (min-width: 1260px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 
@@ -226,7 +230,7 @@ Biết dùng các phần mềm: OpenOffice, Borland, Microsoft C/C++, Motif Tool
   <p>Có kinh-nghiệm làm-việc với người ngoại-quốc qua các chuyến-công-tác ở Đức, Canada, Nhật, Thái-Lan, Pháp.</p>
 
   <h3>Từ Tháng Ba năm 2011 đến Tháng Bảy năm 2021 <a href="https://www.manulife.com.vn/" target="_blank">Manulife</a>, Việt-Nam</h3>
-  <p><a href="/huu-ich/ke-hoach-tai-chinh/">Tư-vấn-tài-chính-gia-đình</a> (miễn-phí), tư-vấn các công-cụ đầu-tư và bảo-hiểm: <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu">quỹ-mở</a>, Điểm Tựa Đầu Tư, <a href="/huu-ich/cac-loai-bao-hiem/bhnt-lien-ket-chung">Gia Đình Tôi Yêu</a>.</p>
+  <p><a href="/huu-ich/ke-hoach-tai-chinh/">Tư-vấn-tài-chính-gia-đình</a>, tư-vấn (miễn-phí) các công-cụ đầu-tư và bảo-hiểm: <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu">quỹ-mở</a>, Điểm Tựa Đầu Tư, <a href="/huu-ich/cac-loai-bao-hiem/bhnt-lien-ket-chung">Gia Đình Tôi Yêu</a>.</p>
 
   <h3>Từ Tháng Mười Một năm 2006 đến Tháng Mười Hai năm 2015 <a href="https://netnam.com/" target="_blank">Netnam</a>, Việt-Nam</h3>
   <p>Tư-vấn-kỹ-thuật-mạng</p>
