--- a/404.html
+++ b/404.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
-<!-- saved from url=(0041)https://css-tricks.com/examples/Sitemap/# -->
-
-
+<!doctype html>
 <html amp lang="vi">
 <head>
-<title>Mục-lục website LêHBội</title>
-<meta name="description" content="Mục lục website lhboi.name.vn, liên kết tới các thông in hữu ích cho tài chính cá nhân và gia đình">
-<meta name="keywords" content="hữu ích, tài chính, cá nhân, sitemap">
-<link rel="alternate" href="https://www.lhboi.name.vn/sitemap">
-<link rel="canonical" href="https://lehboi.github.io/sitemap">
+<title>Tìm trong Trang web LHBội</title>
+<meta name="description" content="Trang web cá nhân Lê Hồng Bội" />
+<meta name="keywords" content="hữu ích, tài chính, cá nhân">
+<link rel="canonical" href="http://www.lhboi.name.vn/404">
+
+
 <!-- in head of html file -->
 <meta charset='utf-8'>
 <script async src="https://cdn.ampproject.org/v0.js"></script>
@@ -18,6 +16,8 @@
 <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
 
 
+<script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
+<script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
 
 
 <!-- font-size https://css-tricks.com/snippets/css/fluid-typography/ -->
@@ -103,167 +103,52 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 @media (max-width: 399px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:10px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 400px) and (max-width: 499px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:20px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 500px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 @media (min-width: 1260px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 
 </style>
-
+<script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
 </head>
 
 <body>
-<!-- top of body -->
 <main>
-
   <div class="body">
-    <div>
-<amp-social-share type="system" height="32"></amp-social-share>
-<amp-social-share type="facebook" height="32" data-param-app_id="1879212745697311"></amp-social-share>
-<amp-social-share type="whatsapp" height="32"></amp-social-share>
-<amp-social-share type="linkedin" height="32"></amp-social-share>
-<amp-social-share type="twitter" height="32"></amp-social-share>
-<amp-social-share type="tumblr" height="32"></amp-social-share>
-<amp-social-share type="line" height="32"></amp-social-share>
-<amp-social-share type="email" height="32"></amp-social-share>
-    </div>
-
-    <h1>Mục-lục website LêHBội</h1>
-
-  <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about'>Thân-thế</a><br>
-    <a href='/home/cv'>Thành-tích</a><br>
-  <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
-
-    <a href='/huu-ich/cac-giai-doan'>Các giai-đoạn của cuộc-đời</a><br>
-    <a href='/huu-ich/chi-tieu'>Chi-tiêu có kế-hoạch</a><br>
-    <a href='/huu-ich/nghi-luc'>Nghị-lực để có dư tiền</a><br>
-    <a href='/huu-ich/lam-phat-loi-song'>Lạm-phát-lối-sống</a><br>
-    <a href='/huu-ich/tich-luy'>Tích-luỹ tài-sản</a><br>
-    <a href='/huu-ich/tich-luy-dai-han'>So-sánh công-cụ tích-luỹ-dài-hạn</a><br>
-    <a href='/huu-ich/lam-giau-khong-kho'>Làm-giàu không khó</a><br>
-    <a href='/huu-ich/de-tien-vao-dau'>Để tiền vào đâu</a><br>
-    <a href='/huu-ich/cach-dau-tu'>Những cách đầu-tư</a><br>
-    <a href='/huu-ich/dung-so-dau-tu'>Đừng sợ chữ đầu-tư</a><br>
-    <a href='/huu-ich/hieu-qua-dau-tu'>Tính hiệu-quả của việc đầu-tư</a><br>
-    <a href='/huu-ich/vao-dai-hoc'>Chuẩn-bị vào đại-học và vào đời</a><br>
-    <a href='/huu-ich/tien-thuong-cuoi-nam'>Tiền-thưởng cuối năm</a><br>
-    <a href='/huu-ich/thong-ke-huu-tri-tu-nguyen-my'>Vài số-liệu về quỹ-hưu-trí-tự-nguyện ở Mỹ</a>
-
-      <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
-
-        <a href='/huu-ich/ke-hoach-tai-chinh/khtcp1'>Kế-hoạch-tích-luỹ</a><br>
-        <a href='/huu-ich/ke-hoach-tai-chinh/khtcp2'>Kế-hoạch-an-hưởng</a><br>
-        <a href='/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han'>Cách ghi sổ khi đầu-tư dài-hạn</a><br>
-        <a href='/huu-ich/ke-hoach-tai-chinh/bao-ve'>Bảo-vệ nguồn-thu-nhập</a><br>
-        <a href='/huu-ich/ke-hoach-tai-chinh/tang-thu-nhap'>Tăng thu-nhập</a>
-
-      <h4 class="myheader"><a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a></h4>
-
-        <a href='/huu-ich/dau-tu-co-phieu/quy-dau-tu'>Tìm hiểu về Quỹ-đầu-tư</a><br>
-        <a href='/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu'>Sổ-tiết-kiệm hay Quỹ-đầu-tư?</a><br>
-        <a href='/huu-ich/dau-tu-co-phieu/thi-truong-xuong-doc'>Làm gì khi thị-trường xuống-dốc?</a>
-
-      <h4 class="myheader"><a href='/huu-ich/cac-loai-bao-hiem/'>Các loại bảo-hiểm</a></h4>
-
-        <a href='/huu-ich/cac-loai-bao-hiem/phi-bao-hiem-nhan-tho'>Phí-bảo-hiểm-nhân-thọ</a><br>
-        <a href='/huu-ich/cac-loai-bao-hiem/bhnt-lien-ket-chung'>Bảo-hiểm-nhân-thọ-liên-kết-chung</a>
-
-      <h4 class="myheader"><a href='/huu-ich/cau-chuyen/'>Câu-chuyện</a></h4>
-
-        <a href='/huu-ich/cau-chuyen/bai-hoc-pho-thong'>Những bài học trong chương trình phổ thông có ích không?</a><br>
-        <a href='/huu-ich/cau-chuyen/nhung-hon-da'>Những hòn-đá trong tài chính gia đình</a><br>
-        <a href='/huu-ich/cau-chuyen/bat-dau-dau-tu'>Bắt-đầu đầu-tư càng sớm càng tốt</a><br>
-        <a href='/huu-ich/cau-chuyen/uoc-mo-thanh-ti-phu'>Thực-hiện ước-mơ thành tỷ-phú</a><br>
-        <a href='/huu-ich/cau-chuyen/nhung-quyet-dinh-tot-cho-tuoi-gia'>Những quyết-định tốt cho tuổi-già</a><br>
-        <a href='/huu-ich/cau-chuyen/nghi-huu-som'>Về-hưu trước 40 tuổi</a><br>
-        <a href='/huu-ich/cau-chuyen/tranh-mang-no'>Tránh mang nợ</a><br>
-        <a href='/huu-ich/cau-chuyen/dung-the-tin-dung-khon-ngoan'>Dùng thẻ-tín-dụng một cách khôn-ngoan</a><br>
-        <a href='/huu-ich/cau-chuyen/mua-nha-hay-dau-tu'>Để tiền mua-nhà hay đầu-tư</a><br>
-        <a href='/huu-ich/cau-chuyen/kakeibo'>Tiết-kiệm tiền kiểu Nhật</a><br>
-        <a href='/huu-ich/cau-chuyen/bot-lo-ve-tien'>Sáu điều giúp tôi bớt lo-lắng về tiền-bạc</a><br>
-        <a href='/huu-ich/cau-chuyen/sinh-lao-benh-tu'>Sinh Lão Bệnh Tử</a>
-
-  <h3 class="myheader">Kinh-nghiệm</h3>
-    <h4 class="myheader"><a href='/kinh-nghiem/may-tinh/'>Máy-tính</a></h4>
-
-      <a href='/kinh-nghiem/may-tinh/protect'>Bảo-vệ tài-sản-số-hoá</a><br>
-      <a href='/kinh-nghiem/may-tinh/cloudstorage'>Kinh-nghiệm dùng cloud storage</a><br>
-      <a href='/kinh-nghiem/may-tinh/privcloudstor'>Hướng-dẫn làm cloud storage server</a><br>
-      <a href='/kinh-nghiem/may-tinh/pi-network'>Tiền-điện-tử Pi</a><br>
-      <a href='/kinh-nghiem/may-tinh/cryptocurrency'>Hỏi đáp về Cryptocurrency<</a><br>
-      <a href="/kinh-nghiem/may-tinh/vi-dien-tu">Nhận-xét các ví-điện-tử</a><br>
-      <a href='/kinh-nghiem/may-tinh/gnucash'>Dùng GnuCash để quản lý tài sản gia đình</a><br>
-      <a href='/kinh-nghiem/may-tinh/ham-tai-chinh'>Các phép-tính-tài-chính cần biết</a><br>
-      <a href='/kinh-nghiem/may-tinh/roaming'>Wi-Fi Roaming</a><br>
-      <a href='/kinh-nghiem/may-tinh/tien-ich-di-dong'>Tiện-ích-di-động</a><br>
-      <a href='/kinh-nghiem/may-tinh/OTT-apps'>OTT app để liên-lạc</a><br>
-      <a href='/kinh-nghiem/may-tinh/RCS'>Dịch vụ tin nhắn RCS</a><br>
-      <a href='/kinh-nghiem/may-tinh/conferencecall'>Conference Call</a><br>
-      <a href='/kinh-nghiem/may-tinh/tai-khoan-google'>Tạo tài-khoản Google</a><br>
-      <a href='/kinh-nghiem/may-tinh/googlemaps'>Kinh-nghiệm dùng Google Maps ở Việt-Nam</a><br>
-      <a href='/kinh-nghiem/may-tinh/spam-call'>Chặn những cuộc-gọi-tiếp-thị</a><br>
-      <a href='/kinh-nghiem/may-tinh/spam'>Những cách chặn spam mail</a><br>
-      <a href='/kinh-nghiem/may-tinh/raspberrypi'>RaspberryPi</a><br>
-      <a href='/kinh-nghiem/may-tinh/toys'>Home server cũ</a><br>
-      <a href='/kinh-nghiem/may-tinh/oss'>Phần-mềm-mã-nguồn-mở</a><br>
-      <a href='/kinh-nghiem/may-tinh/phan-mem-tu-do'>Phần-mềm-tự-do</a><br>
-      <a href='/kinh-nghiem/may-tinh/cashflow'>Trò-chơi học-làm-giàu Cashflow</a>
-
-    <h4 class="myheader"><a href='/kinh-nghiem/chu-viet/'>Chữ-Việt</a></h4>
-
-      <a href='/kinh-nghiem/chu-viet/ghi-dau-thanh-1'>Vị-trí dấu-thanh</a><br>
-      <a href='/kinh-nghiem/chu-viet/unicode'>Chữ Việt trong Unicode</a><br>
-      <a href='/kinh-nghiem/chu-viet/utf-8'>Chữ Việt và UTF-8</a><br>
-      <a href='/kinh-nghiem/chu-viet/web'>Web Chữ Việt</a>
-
-    <h4 class="myheader"><a href='/kinh-nghiem/linh-tinh/'>Linh tinh</a></h4>
-
-      <a href='/kinh-nghiem/linh-tinh/bep'>So sánh chi phí giữa dùng bếp ga-bếp điện cảm ứng-lò microwave</a><br>
-      <a href='/kinh-nghiem/linh-tinh/ac-dc'>Điện một chiều và điện xoay chiều</a><br>
-      <a href='/kinh-nghiem/linh-tinh/tieu-thu-dien'>Đo công suất tiêu thụ điện một số máy nhỏ thường gặp</a><br>
-      <a href='/kinh-nghiem/linh-tinh/dien-standby'>Điện standby tốn bao nhiêu?</a><br>
-      <a href='/kinh-nghiem/linh-tinh/magchan'>Dùng thử Magchan để giặt</a><br>
-      <a href='/kinh-nghiem/linh-tinh/may-lanh'>Hiểu rõ Máy lạnh</a><br>
-      <a href='/kinh-nghiem/linh-tinh/may-lanh-inverter'>Máy lạnh inverter có gì khác?</a><br>
-      <a href='/kinh-nghiem/linh-tinh/nong'>Bàn về tình trạng nóng</a><br>
-      <a href='/kinh-nghiem/linh-tinh/nhiet-do'>Nhiệt độ suốt ngày ở Sài Gòn</a><br>
-      <a href='/kinh-nghiem/linh-tinh/tan-so-cua-tv'>Tần số của TV</a><br>
-      <a href='/kinh-nghiem/linh-tinh/hong-ngoai'>Chơi với tia hồng ngoại</a>
-
-  <h3 class="myheader"><a href='/y-kien/'>Ý kiến</a></h3>
-
-    <a href='/y-kien/su-giau-co'>Các nguồn gốc của sự giàu có</a><br>
-    <a href='/y-kien/bat-ca-hai-tay'>Bắt cá hai tay nghĩa là gì?</a><br>
-    <a href='/y-kien/xa-hoi-thong-tin'>Viễn cảnh: Một xã hội thông tin ở Việt Nam</a><br>
-    <a href='/y-kien/bi-mat-doi-tu'>Bàn về Bí-mật đời-tư</a><br>
-    <a href='/y-kien/dung-hang-viet-nam'>Dùng hàng Việt</a><br>
-    <a href='/y-kien/muc-hay-den'>Gần mực thì đen, gần đèn thì sáng</a><br>
-    <a href='/y-kien/thanh-ngu-ve-tien'>Thành ngữ về tiền</a><br>
-    <a href='/y-kien/gia-tra'>Thế giới đầy những giả trá</a><br>
-    <a href='/y-kien/nhung-cai-nem'>Những cái nêm trên đường phố</a><br>
-    <a href='/y-kien/khac-nguoi'>Cư xử khác người là tốt hay xấu?</a><br>
-    <a href='/y-kien/da-len-bao'>Những ý-kiến đã đăng báo</a>
-
-  <h3 class="myheader">Danh mục</h3>
-    <a href='/download/'>Download</a><br>
-    <a href='/sitemap'>Mục lục</a>
-  <h3 class="myheader"></h3>
-  <br>
-  <br>
-  <br>
-  <br>
-
+    <div class="title">Tìm trong web site này</div>
+Trang web /404.shtml hiện không có trong server localhost. Bạn có thể tìm trang tương tự bằng ô dưới đây.
+<amp-iframe noloading width=100 height=100
+              sandbox="allow-scripts allow-popups allow-popups-to-escape-sandbox allow-forms allow-top-navigation"
+              layout="responsive"
+              frameborder="0"
+      srcdoc="<script>
+  (function() {
+    var cx = '015898967893560378623:puwk6x4aosq';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
+<gcse:search></gcse:search>">
+<amp-img placeholder layout="fill" src="https://m.lhboi.name.vn/images/transparent.png"></amp-img>
+</amp-iframe>
   </div>
 </main>
 </body>
