--- a/kinh-nghiem/linh-tinh/dia-chi.html
+++ b/kinh-nghiem/linh-tinh/dia-chi.html
@@ -210,7 +210,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <li>những con-đường có cùng tên ở các quận/huyện khác nhau</li>
 <li>việc đổi tên đường qua thời-gian</li>
 </ul>
-<p>Với hiện-trạng này thì công-cụ bản-đồ <a hred="../may-tinh/googlemaps">Google Maps</a> cũng không thể chỉ đường chính-xác trong mọi trường-hợp.
+<p>Với hiện-trạng này thì công-cụ bản-đồ <a href="../may-tinh/googlemaps">Google Maps</a> cũng không thể chỉ đường chính-xác trong mọi trường-hợp.
 <br>Rất khó để cải-thiện tình-trạng này vì những trở-ngại dưới đây.</p>
 
 <h2>Những trở-ngại trong việc điều-chỉnh số-nhà</h2>
