--- a/kinh-nghiem/linh-tinh/xe-dien-xang.html
+++ b/kinh-nghiem/linh-tinh/xe-dien-xang.html
@@ -271,7 +271,7 @@ tạo ra lực-cản không-đáng-kể trên trục-bánh-xe nên bánh-xe lăn
 <p>Sau-đây là nhận-xét của tôi về xe-đạp-điện trợ-lực Chevélo Eiffel 36V do <a href="https://wiibike.com" target='_blank'>Wiibike</a> ráp. Wiibike chuyên ráp thêm phần điện cho các xe-đạp có sẵn để dùng được như xe-đạp-điện trợ-lực.</p>
 <p>Xe này là loại xe-đạp đường-dài—touring bike, bộ-truyền-động có ba cỡ đĩa và bảy cỡ líp để thay-đổi tỷ-số-truyền vận-tốc đạp của người đến vận-tốc quay của bánh-xe từ một đến bốn lần. Tay-đề bên trái chọn cỡ đĩa từ 1 đến 3 ứng với các đĩa từ nhỏ đến lớn. Tay-đề bên phải chọn cỡ líp từ 1 đến 7 ứng với các líp từ lớn đến nhỏ. Các số này càng lớn thì lực-cản ở bàn-đạp càng lớn. Thay-đổi cỡ đĩa có tác-dụng lớn hơn thay-đổi cỡ líp.</p>
 <p>Phần điện do Wiibike ráp thêm gồm có động-cơ-điện 350 Watt, pin lithium 36 Volt 13 Ah và bộ-điều-tốc ở khung-xe, bảng-điều-khiển ở tay-lái bên trái, tay-ga ở tay-lái bên phải, và đèn.
-<br>Bộ-pin nặng 3,4 Kg, có-thể tháo rời khỏi xe (sau khi dùng chìa-khoá mở khoá). Trên bộ-pin có công-tắc để cấp điện cho bộ-điều-tốc. Qua bảng-điều-khiển, người-lái có-thể chọn không dùng động-cơ (số 0), hoặc năm ngưỡng công-suất (số 1 đến 5) tương-ứng với các ngưỡng vận-tốc 10/20/30/40/50 Km/giờ. Bảng-điều-khiển chỉ hiện vận-tốc của xe khi động-cơ hoạt-động, khi bánh-xe lăn theo quán-tính thì bảng-điều-khiển báo vận-tốc là zero.
+<br>Bộ-pin nặng 3,4 Kg, có-thể tháo rời khỏi xe (sau khi dùng chìa-khoá mở khoá). Trên bộ-pin có công-tắc để cấp điện cho bộ-điều-tốc. Qua bảng-điều-khiển, người-lái có-thể chọn không dùng động-cơ (số 0), hoặc năm ngưỡng công-suất (số 1 đến 5) tương-ứng với các ngưỡng vận-tốc 10/20/30/40/50 Km/giờ. Do đầu-cắm dây tín-hiệu từ động-cơ đến bộ-điều-tốc không đủ nên bảng-điều-khiển chỉ hiện vận-tốc của xe khi động-cơ hoạt-động, khi bánh-xe lăn theo quán-tính thì bảng-điều-khiển báo vận-tốc là zero.
 <br>Khi không dùng động-cơ thì dùng xe như xe-đạp thường, chọn cỡ đĩa và cỡ líp thích-hợp với sức-khoẻ và tình-trạng đường.</p>
 <div><amp-img src="/images/WiibikeCPanel.jpg" width="768" height="384" layout="responsive"></amp-img></div>
 <p>Bộ-điều-tốc ưu-tiên cho cách vặn ga: khi vặn ga thì cảm-biến-nhịp không có tác-dụng.
@@ -280,7 +280,7 @@ Sau hơn một năm chạy xe này với cảm-biến-nhịp, tôi tắt cảm-b
 <p>Ngoài ra, xe này có kiểu đi dạo: không cần vặn ga cũng không cần đạp, động-cơ kéo xe đi đều ở vận-tốc khoảng 8 Km/giờ.
 <br>Để chọn kiểu này thì chọn số 0 cho động-cơ, rồi giữ nút ⊖ khoảng ba giây, bên-cạnh số 0 sẽ hiện lên hình người đi bộ.
 <br>Để ngừng đi dạo thì giữ nút ⊖ khoảng ba giây, hình người đi bộ sẽ biến mất.
-<br>Còn một kiểu để không cần vặn ga cũng không cần đạp, động-cơ kéo xe đi đều là cruise control. Động-cơ được cấp điện theo tỷ-lệ PWM tương-ứng với một vận-tốc do người-lái chọn.</p>
+<br>Còn một kiểu để không cần vặn ga cũng không cần đạp, động-cơ kéo xe đi đều là cruise control. Động-cơ được cấp điện theo tỷ-lệ PWM tương-ứng với một vận-tốc do người-lái chọn. Để chọn kiểu này thì vặn ga đến vận-tốc mong-muốn rồi giữ nút ⊖ khoảng ba giây, bên-trái của vận-tốc sẽ hiện lên <a href="https://en.wikipedia.org/wiki/File:Cruise_Control.svg" target='_blank'>dấu-hiệu cruise control</a>, lúc-này có-thể vặn ga về zero. Để ngừng cruise control thì giữ nút ⊖ khoảng ba giây hoặc vặn ga, dấu-hiệu cruise control sẽ biến mất.</p>
 
 <p>Một-vài kinh-nghiệm chạy xe có trợ-lực:</p>
 <dl>
@@ -291,7 +291,7 @@ Sau hơn một năm chạy xe này với cảm-biến-nhịp, tôi tắt cảm-b
 <dt>Xe đang chạy đều nhưng lực-cản ở bàn-đạp quá nhỏ</dt><dd>Do chọn ngưỡng công-suất lớn, công-suất động-cơ đủ để xe chạy nhanh hơn vận-tốc đạp nên không còn lực-cản ở bàn-đạp, cần phải tăng số ở tay-đề đĩa/líp.</dd>
 <dt>Xe đang chạy đều nhưng lực-cản ở bàn-đạp quá lớn</dt><dd>Chọn ngưỡng công-suất lớn hơn (sẽ làm tăng vận-tốc xe), hoặc giảm số ở tay-đề đĩa/líp.</dd>
 </dl>
-<p>Có-thể nói chạy xe-đạp-điện trợ-lực mà tận-dụng hết các khả-năng của nó thì rắc-rối hơn chạy xe-tay-ga nhiều: ngoài việc vặn tay-ga còn phải liên-tục thay-đổi đĩa, líp, ngưỡng công-suất. Tất-nhiên là cũng có-thể chỉ dùng theo cách đơn-giản là chỉ vặn tay-ga, như-vậy thì lãng-phí khả-năng trợ-lực.</p>
+<p>Có-thể nói chạy xe-đạp-điện trợ-lực mà tận-dụng hết các khả-năng của nó thì rắc-rối hơn chạy xe-tay-ga nhiều: ngoài việc vặn tay-ga còn phải liên-tục thay-đổi đĩa, líp, ngưỡng công-suất. Nếu không thay-đổi đĩa, líp thì sẽ không chọn được lực và nhịp đạp thích-hợp. Tất-nhiên là cũng có-thể chỉ dùng theo cách đơn-giản là chỉ vặn tay-ga, như-vậy thì lãng-phí khả-năng trợ-lực.</p>
 <p>Một-vài số-đo sau nhiều lần chạy xe:</p>
 <ul>
 <li>Chạy xe nhiều lộ-trình theo kiểu trợ-lực với động-cơ ở số 1, tổng quãng-đường khoảng 100 Km, đèn LED báo pin còn 3/4, sạc lại đến đầy pin hết 0,26 KWh điện, khoảng 860 đồng.</li>
