--- a/kinh-nghiem/may-tinh/cryptocurrency.html
+++ b/kinh-nghiem/may-tinh/cryptocurrency.html
@@ -218,9 +218,15 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <p>Khi giao-dịch tiền trong ngân-hàng thường, mỗi sự chuyển-dịch của tiền đều được ghi lại bằng một dòng đại-khái như “chuyển x đồng từ tài-khoản của An đến tài-khoản của Bình” trong server của ngân-hàng. Trong mạng-ngang-hàng, không có một server tập-trung thông-tin, mà mọi thành-viên trong mạng (gọi là node, còn gọi là miner) đều có một bản-sao tất-cả sổ-cái-ghi-chép-giao-dịch—ledger. Phát-minh của Satoshi là cách để mọi bản-sao ở tất-cả các node đều đồng-nhất với nhau. Satoshi gọi đồng tiền-điện-tử mới đó là Bitcoin. Trong hệ-thống Bitcoin, dòng “chuyển x bitcoin từ tài-khoản A đến tài-khoản B” phải được ký bởi chữ-ký điện-tử (private key) của A rồi được truyền đến tất cả các node trong mạng. Giao-dịch đó còn phải chờ được các node phê-chuẩn rồi mới được thực-hiện. Các node phải kiểm-tra để chắc-chắn rằng x bitcoin thật-sự là của A.</p>
 <p>Các máy-tính node sẽ kiểm-tra, xử-lý các lệnh-giao-dịch đó để gói các giao-dịch vào một block theo thuật toán SHA 256, và nối block đó với các block đã có trước. Khi quá-trình đó hoàn-thành thì giao-dịch mới được xác-nhận. Miner nào gói được một block đạt yêu-cầu sớm nhất sẽ được thưởng bằng những bitcoin mới sinh ra.</p>
 <h3 id="signing">Ký bằng chữ-ký điện-tử thế nào?</h3>
-<p><a href="https://en.wikipedia.org/wiki/Digital_signature" target='_blank'>Chữ-ký điện-tử</a> là một cặp hai số rất lớn: private key và public key. Tên gọi của hai số đó đã cho biết: phải giữ kín private key, và để public key cho mọi người biết.
+<p><a href="https://en.wikipedia.org/wiki/Digital_signature" target='_blank'>Chữ-ký điện-tử</a> là một chuỗi chữ và số được máy-tính tính ra từ một nội-dung cần ký. Đặc-tính của chữ-ký điện-tử là:</p>
+<ol>
+<li>không-thể làm giả chữ-ký,</li>
+<li>không-thể thay-đổi nội-dung sau khi đã ký, vì nội-dung khác sẽ có chữ-ký với chuỗi chữ và số khác,</li>
+<li>có-thể biết được người nào đã ký.</li>
+</ol>
+<p>Để tạo ra chữ-ký điện-tử cần phải có chứng-thư số, là cặp hai số rất lớn: private key và public key. Tên gọi của hai số đó đã cho biết: phải giữ kín private key, và để public key cho mọi người biết.
 <br>Khi ký một thông-điệp m, máy-tính sẽ tính ra một chữ-ký s từ m và private key rồi gửi s kèm theo m. Bên nhận được thông-điệp sẽ dùng public key và m để tính ra xem kết-quả có khớp với s hay không. Nếu không khớp nghĩa là m đã bị tráo trên đường truyền.</p>
-<p>Một ứng-dụng khác của chữ-ký điện-tử là mã-hoá thông-điệp để giữ bí-mật. Khi A muốn gửi một thông-điệp hay file m cho B mà không cho bất-kỳ ai khác biết được nội-dung thì A dùng public key của B để mã-hoá thông-điệp m thành m'. B nhận được thông-điệp m' sẽ dùng private key để giải-mã trở lại thành m. Bất-kỳ người nào khác chép được m' trên đường truyền đều không thể giải-mã được.</p>
+<p>Một ứng-dụng khác của chữ-ký điện-tử là mã-hoá thông-điệp để giữ bí-mật. Khi A muốn gửi một thông-điệp hay file m cho B mà không cho bất-kỳ ai khác biết được nội-dung thì A dùng public key của B để mã-hoá thông-điệp m thành m'. B nhận được thông-điệp m' sẽ dùng private key của chính mình để giải-mã trở lại thành m. Bất-kỳ người nào khác chép được m' trên đường truyền đều không thể giải-mã được vì không có private key của B.</p>
 
 <h3 id="storage">Bitcoin được giữ như thế nào?</h3>
 <p>Bitcoin được giữ trong các tài-khoản—account. Mỗi tài-khoản có một cặp hai con-số rất lớn là public key và private key, hai con-số này là duy-nhất trong toàn blockchain, không có tài-khoản nào có key giống tài-khoản khác. Public key là địa-chỉ của tài-khoản—tương-đương với số-tài-khoản ngân-hàng. Private key là khoá-bí-mật, dùng để thực-hiện giao-dịch trên tài-khoản.</p>
@@ -304,9 +310,8 @@ Giao-dịch trên sàn thì tốn phí-giao-dịch, phí chuyển bitcoin vào v
 <br>Tab Token Txns cho xem những giao-dịch sweat token: các lần nhận thưởng từ số bước-chân, staking, chuyển token sweat.</p>
 
 <h4>Swap</h4>
-<p>Bạn có thể swap—đổi-tiền từ Sweat sang NEAR tại <a href="https://ref.finance" target='_blank'>ref.finance</a>.
-<br>Tuy-nhiên, trước khi thực-hiện giao-dịch thì bạn cần phải có ít nhất 0,1 NEAR, bạn cần phải mua NEAR bằng tiền fiat từ <a href="https://wallet.near.org" target='_blank'>wallet NEAR</a>, hoặc mua qua link trong app Sweat Wallet.</p>
-<p>Chức-năng swap sẽ có trong app Sweat wallet trong tương-lai gần.</p>
+<p>Bạn có thể swap—đổi-tiền từ Sweat sang NEAR ngay trong app Sweat Wallet hoặc tại <a href="https://ref.finance" target='_blank'>ref.finance</a>.
+<br>Bạn phải trả phí khi giao-dịch. Trước-đây thì trả phí bằng NEAR, trước khi thực-hiện giao-dịch thì bạn cần phải có ít nhất 0,1 NEAR, bạn cần phải mua NEAR bằng tiền fiat từ <a href="https://wallet.near.org" target='_blank'>wallet NEAR</a>, hoặc mua qua link trong app Sweat Wallet. Hiện-nay đã có-thể trả phí bằng Sweat khi giao-dịch trong app Sweat Wallet, và có-thể giảm phí bằng cách xem quảng-cáo.</p>
 
 <h4>Tương-lai</h4>
 <p>Sweatcoin sẽ ghi nhận được thêm các kiểu hoạt-động cơ-thể khác ngoài bước-chân.
@@ -314,7 +319,8 @@ Giao-dịch trên sàn thì tốn phí-giao-dịch, phí chuyển bitcoin vào v
 
 <h3 id="brave">Brave Rewards</h3>
 <p>Brave là một phần-mềm web browser với đặc-điểm cho phép bạn kiểm-soát việc xem quảng-cáo. Brave sẽ lọc bỏ phần-lớn quảng-cáo trong các trang web và đề-nghị bạn xem những quảng-cáo từ những nguồn chọn-lọc. Brave hiện ra một dòng tóm-tắt về quảng-cáo, bạn tự quyết-định xem hay không xem quảng-cáo đó. Điều khác nhau giữa Brave và các browser khác là tiền quảng-cáo được chia cho ba bên (Brave, chủ trang web, và người xem web) thay vì chỉ có hai bên. Khi xem một quảng-cáo, bạn được tặng một ít BAT—Basic Attention Token. BAT là token dựa trên blockchain Ethereum. BAT hiện đang có giá 23 cent Mỹ.</p>
-<p>Rất không-may là BAT chỉ được chuyển vào ví của người-dùng đã KYC ở một trong hai sàn Uphold hoặc Gemini, nhưng hai sàn đó chưa chấp-nhận cho người Việt-Nam dùng. Khi chưa có ví ở hai sàn đó thì BAT nhận được chỉ dược dùng để tặng cho các website. Các chủ website cũng phải qua KYC mới được nhận tiền tặng. Tôi đã thử gửi tiền tặng website <a href="https://wikipedia.org" target='_blank'>Wikipedia</a>.</p>
+<p>Rất không-may là BAT chỉ được chuyển vào ví của người-dùng đã KYC ở một trong hai sàn Uphold hoặc Gemini, nhưng hai sàn đó chưa chấp-nhận cho người Việt-Nam dùng. Tôi đã thử tạo trương-mục ở <a href="https://gemini.com" target='_blank'>Gemini</a>, trương-mục đó chờ verified mãi không xong nên không tạo ví được. Khi chưa có ví ở hai sàn đó thì BAT nhận được chỉ dược dùng để tặng cho các website. Các chủ website cũng phải qua KYC mới được nhận tiền tặng. Tôi đã thử gửi tiền tặng website <a href="https://wikipedia.org" target='_blank'>Wikipedia</a>.</p>
+<p>Từ đầu-năm 2024, Brave bắt-đầu thử chuyển BAT đến các ví self-custody trong blockchain Solana. Trong <a href="https://brave.com/blog/rewards-solana/" target='_blank'>giai-đoạn thử</a>, Brave chỉ mời một-số người tham-gia.</p>
 
 <h3 id="pi">Pi Network—một loại tiền-điện-tử cho mọi người</h3>
 <p>Pi rất khác các loại tiền-điện-tử còn lại. Pi được xây-dựng để trở-thành phương-tiện trao-đổi hàng-hoá và dịch-vụ toàn-cầu. Khác với hai loại trên, Pi chưa hoàn-thiện nhưng giá-trị của Pi cao hơn.
